<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/start_reg_btn"
        android:layout_width="287dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="104dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/need_a_new_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="280dp"
        android:layout_height="55dp"
        android:layout_above="@+id/start_reg_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/holo_green_light"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="276dp"
        android:text="@string/by_swapnil_pawar"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="348dp"
        android:text="@string/chatapp"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:textStyle="bold" />

</RelativeLayout>