<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.example.ChatApp.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="175dp"
        android:layout_height="189dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FFEB3B" />

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/swapnil_pawar"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_display_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/hi_there_i_am_using_chatapp_by_swapnil"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/settings_status_btn"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="104dp"
        android:background="@android:color/holo_orange_dark"
        android:text="@string/change_status"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="220dp"
        android:layout_height="55dp"
        android:layout_above="@+id/settings_status_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:background="@android:color/background_light"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>